--- a/api-page/index.html
+++ b/api-page/index.html
@@ -78,7 +78,7 @@ Selamat datang di dokumentasi RyzenThawne-API. Antarmuka interaktif ini memungki
      <div class="mb-4 text-xs space-y-1">
             
                 <div>
-                    <a href="https://t.me/FlowFalcon" target="_blank" class="text-slate-300 hover:text-white underline">Contact RyzenThawnep.</a>
+                    <a href="https://wa.me/6285297424012" target="_blank" class="text-slate-300 hover:text-white underline">Contact RyzenThawne.</a>
                 </div>
             
         </div>
