--- a/api-page/index.html
+++ b/api-page/index.html
@@ -126,7 +126,7 @@ Selamat datang di dokumentasi RyzenThawne-API. Antarmuka interaktif ini memungki
 </div>
 <footer>
     <p class="text-slate-400 text-xs mx-auto mb-4">
-      2025 FlowFalcon   
+      © 2025 RyzenThawne   
     </p>
     <p class="text-slate-400 text-xs mx-auto mb-4">
 inspirasi design dari: <a href="https://api.nekolabs.my.id/" target="_blank">api.nekolabs.my.id</a>   
